PIC-15 Add Alert for non-responding nodes