@@ -9,6 +9,7 @@ repositories {
 
 dependencies {
     compile 'eu.hansolo:tilesfx:11.2'
+    compile 'org.controlsfx:controlsfx:11.0.0'
     compile 'org.kordamp.ikonli:ikonli-javafx:11.3.4'
     compile 'org.kordamp.ikonli:ikonli-material-pack:11.3.4'
 }
@@ -19,3 +20,10 @@ javafx {
 }
 
 mainClassName = 'com.gluonhq.iotmonitor.monitor.Main'
+
+run {
+    jvmArgs +=  [
+            "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+            "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED"
+    ]
+}
